finish auth, user, product unit tests

--- a/app/order/conf/test/conf.yaml
+++ b/app/order/conf/test/conf.yaml
@@ -16,7 +16,7 @@ registry:
   password: ""
 
 mysql:
-  dsn: "%s:%s@tcp(%s:3306)/%s?charset=utf8mb4&parseTime=True&loc=Local"
+  dsn: "%s:%s@tcp(%s:3306)/order?charset=utf8mb4&parseTime=True&loc=Local"
 
 redis:
   address: "localhost:6379"
