1.docker中添加了grafana监控大盘;2.优化了页面中标题部分;3.在env配置中添加监控的配置;添加了cart、checkout、order、payment的功能测试代码

--- a/app/cart/.env
+++ b/app/cart/.env
@@ -4,3 +4,5 @@ MYSQL_HOST = 127.0.0.1
 # MYSQL_HOST = 192.168.227.128
 REGISTRY_ENABLE=true
 # REGISTRY_ADDR=192.168.227.128:8500
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://172.30.137.28:4317
+OTEL_EXPORTER_OTLP_INSECURE=true
