--- a/app/auth/.env
+++ b/app/auth/.env
@@ -5,3 +5,5 @@ MYSQL_HOST = 127.0.0.1
 
 MYSQL_DATABASE = user
 JWT_SECRET_KEY = 123
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://172.30.137.28:4317
+OTEL_EXPORTER_OTLP_INSECURE=true
