--- a/app/order/.env
+++ b/app/order/.env
@@ -2,3 +2,5 @@ MYSQL_USER=root
 MYSQL_PASSWORD=root
 MYSQL_HOST = 127.0.0.1
 REGISTRY_ENABLE=true
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://172.30.137.28:4317
+OTEL_EXPORTER_OTLP_INSECURE=true
